Fix cart items on mobile

--- a/cart.css
+++ b/cart.css
@@ -52,9 +52,17 @@
     gap: 0.5rem;
 
     align-items: center;
+    justify-content: space-between;
 
     color: var(--color-text);
     text-decoration: unset;
+}
+
+@media (aspect-ratio <= 2/3) {
+    .cart-item {
+        flex-direction: column;
+        align-items: flex-start;
+    }
 }
 
 .item-image {
@@ -78,6 +86,18 @@
     text-decoration: underline;
 }
 
+.item-display {
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+}
+
+.item-part2 {
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+}
+
 .amount-controls {
     display: flex;
     align-items: center;
@@ -89,6 +109,7 @@
     font-weight: 700;
     font-size: 1.3rem;
     width: 5rem;
+    flex-shrink: 0;
     text-align: end;
 }
 
